# -ETF-

./: .gitignore  README.md  pyproject.toml
data/processed/: daily_labels.csv  daily_returns.csv  modeling_dataset_monthly_rebalance.csv  monthly_features.csv  monthly_labels.csv  prices_adj_close.csv
data/raw/: etf_prices_raw.csv
docs/: AI投资学课程案例报告.docx  ai_prompt_design.md  case_report_structure_redesign.md  data_source_and_preprocessing.md  empirical_results_and_dataset_quality.md  final_strategy_design.md  project_deep_dive.md  role_b_dataset_guide.md  role_c_implementation_summary.md  spo_reproduction.md  spo_theory_and_literature_foundation.md  technical_report.md
docs/案例报告/: AI投资学课程案例报告.docx  AI投资学课程案例报告.md
environment/: etf-spo.yml
outputs/tables/: ai_prompt_payload.json  ai_risk_profile_backtest_returns.csv  ai_risk_profile_portfolios.json  ai_risk_profile_validation.json  ai_risk_profile_weights.csv  data_quality_check.csv  download_metadata.json  etf_risk_return_metrics.csv  feature_dataset_quality.json  portfolio_backtest_metrics.csv  spo_backtest_returns.csv  spo_candidate_portfolios.csv  spo_model_metrics.csv  spo_portfolio_weights.csv  spo_prediction_scores.csv  spo_reproduction_metadata.json  spo_training_history.csv
scripts/: generate_case_report.py
src/: download_data.py  features.py  generate_ai_risk_profiles.py  generate_technical_report.py  reproduce_spo_paper.py
test/: README.md  backtest_existing_models.py
test/backtest_outputs/: backtest_summary.json  combined_model_backtest_returns.csv  existing_model_backtest_report.md  (+9 more)
